# nexara-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  run_examples.sh
.github/workflows/: publish.yml
examples/: 01_transcribe.py  02_word_timestamps.py  03_diarize.py  04_jobs.py  05_llm.py  06_guardrails.py  07_realtime.py  08_async.py
nexara/: __init__.py  _client.py  _exceptions.py  _http.py  _sentinel.py  _transport.py  _validation.py
nexara/_mock/: fixtures.py  transport.py
nexara/resources/: realtime.py  transcriptions.py
nexara/types/: diarization.py  job.py  realtime.py  transcription.py
tests/: test_async_transport.py  test_client.py  test_http_transport.py
